[package]
name = "neo-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# This set of versions is a known compatible combination.
winit = "0.29"
wgpu = "0.19"
egui = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"

env_logger = "0.11"
pollster = "0.3" 
tokio = { version = "1", features = ["full"] }
chrono = "0.4"